--- a/src/index.css
+++ b/src/index.css
@@ -23,11 +23,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  margin: 0 auto;
+  padding: 0;
+  height: 100vh;
+  background: linear-gradient(to right, #8b5e3c, #c4a45a);
 }
 
 h1 {
